# distributed-channel

./: Cargo.toml  README.md
examples/: consumer.rs  local.rs  producer.rs
src/: consumer.rs  consumer_node.rs  discovery.rs  lib.rs  message.rs  node.rs  producer.rs  swarm.rs  wire.rs  work_pool.rs  worker.rs
