[package]
name = "distributed-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
libp2p = { version = "0.54.1", features = ["tcp", "noise", "yamux", "cbor", "mdns", "tokio", "request-response"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
futures = "0.3.21"
tokio = { version = "1.40.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
log = "0.4.22"
env_logger = "0.11.5"
async-channel = "2.3.1"
